# log-filter

./: .gitignore  README.md  log_filter.py  patterns.json  patterns_ABC.json  patterns_BCD.json  pyproject.toml  requirements.txt  start.sh
logs/: test
tests/: test_log_filter.py
